--- a/8.1/contrib/wfbin/standalone.conf
+++ b/8.1/contrib/wfbin/standalone.conf
@@ -1,4 +1,6 @@
-#!/bin/bash
+#!/usr/bin/env bash
+
+set -e
 
 function print_sed_exp_replace_env_var {
   sed_exp=""
@@ -8,7 +10,7 @@ function print_sed_exp_replace_env_var {
     # or they will cause problems in the sed command line.
     variable_val=$(echo "${!openshift_var}" | sed -e "s@\/@\\\\/@g" | sed -e "s/\"/\\\\\"/g")
     # the entire sed s/search/replace/g command needs to be quoted in case the variable value
-    # contains a space. 
+    # contains a space.
     sed_exp="${sed_exp} -e \"s/\\\${env.${openshift_var}}/${variable_val}/g\""
   done
   printf "%s\n" "$sed_exp"
@@ -42,7 +44,7 @@ then
     export OPENSHIFT_DEFAULT_DATASOURCE=${OPENSHIFT_MYSQL_DATASOURCE}
   fi
   export MYSQL_ENABLED="true"
-fi    
+fi
 
 # postgresql db container must be linked w/ alias "postgresql"
 export POSTGRESQL_ENABLED="false"
@@ -65,7 +67,7 @@ then
     export OPENSHIFT_DEFAULT_DATASOURCE=${OPENSHIFT_POSTGRESQL_DATASOURCE}
   fi
   export POSTGRESQL_ENABLED="true"
-fi    
+fi
 
 if [ ! -n "${OPENSHIFT_DEFAULT_DATASOURCE}" ]
 then
@@ -73,7 +75,7 @@ then
 fi
 
 export OPENSHIFT_HOSTNAME=$HOSTNAME
-     
+
 max_threads=$(ulimit -u)
 
 if ! [[ "$max_threads" =~ ^[0-9]+$ ]] ; then
@@ -90,7 +92,7 @@ if [ -z "$MESSAGING_THREAD_RATIO" ]; then
     MESSAGING_THREAD_RATIO=0.2
 fi
 
-max_memory_mb=${OPENSHIFT_GEAR_MEMORY_MB} 
+max_memory_mb=${OPENSHIFT_GEAR_MEMORY_MB}
 if [ -z "$OPENSHIFT_GEAR_MEMORY_MB" ]; then
   max_memory_mb=512
 fi
@@ -108,7 +110,7 @@ fi
 
 if [ $max_heap -lt 1024 ]
 then
-    memory_options="-XX:+UseSerialGC -Xms40m -Xmx${max_heap}m -XX:MaxPermSize=${max_permgen}m -XX:+AggressiveOpts -Dorg.apache.tomcat.util.LOW_MEMORY=true" 
+    memory_options="-XX:+UseSerialGC -Xms40m -Xmx${max_heap}m -XX:MaxPermSize=${max_permgen}m -XX:+AggressiveOpts -Dorg.apache.tomcat.util.LOW_MEMORY=true"
 else
     memory_options="-XX:+UseSerialGC -Xms40m -Xmx${max_heap}m -XX:MaxPermSize=${max_permgen}m -XX:+AggressiveOpts"
 fi
@@ -169,6 +171,3 @@ fi
 
 export JBOSS_MODULEPATH=$JBOSS_MODULEPATH:/wildfly/modules
 export JAVA_OPTS
-
-
-
